# volt

./: .gitattributes  .gitignore  ADVANCED.md  CHANGELOG.md  COMPONENTS.md  CONTRIBUTING.md  QUICKSTART.md  README.md  counter_codes.txt
.github/: copilot-instructions.md
app-template/: .gitignore  README.md  build.sh  global.css  index.html  preprocesor.py
app-template-x/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.sh  preprocesor.py
app-template-x/src/: App.x.hpp  main.remote.x.cpp  main.x.cpp
app-template-x/src/components/: Button.x.hpp
app-template-x/static/: index.html
app-template/src/: App.hpp  main.cpp
app-template/src/components/: Button.hpp
framework/__internal_framework_dev/include/: Debug.hpp
framework/include/: App.hpp  AppBase.hpp  AppBase_impl.hpp  Attrs.hpp  Attrs_impl.hpp  Component.hpp  ComponentBase.hpp  ComponentBase_impl.hpp  DOM.hpp  DOM_impl.hpp  Debug.hpp  Debug_impl.hpp  Diff.hpp  ETags.hpp  EmremVal.hpp  EventBridge.hpp  EventBridge_impl.hpp  FocusManager.hpp  IRuntime.hpp  IVoltRuntime.hpp  IdManager.hpp  IdManager_impl.hpp  Patch.hpp  RenderingEngine.hpp  RenderingRuntime.hpp  Shortcuts.hpp  StableKeyManager.hpp  StableKeyManager_impl.hpp  String.hpp  Tags.hpp  Tags_impl.hpp  VNode.hpp  VNodeHandle.hpp  VNodeHandle_impl.hpp  VNode_impl.hpp  Volt.hpp  VoltConfig.hpp  VoltDiffPatch.hpp  VoltDiffPatch_impl.hpp  VoltEngine.hpp  (+6 more)
framework/src/: VoltRuntime.cpp  volt.js
framework/user-scripts/: create-volt-app.sh  update-framework.sh
